objects/Project_Piece__c.object
<CustomObject>
    <description>sub object of Projects</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Product_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accuracy_Confirmed__c</fullName>
        <label>Accuracy Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Date__c</fullName>
        <inlineHelpText>vAuto field that represents when the product was turned on in their system.</inlineHelpText>
        <label>Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Status__c</fullName>
        <formula>IF (ISPICKVAL(Piece_Status__c, &quot;Open&quot;), 
IF (LastActivityDate &gt; (Today()-7), &quot;Current&quot;,
IF (LastActivityDate &gt; (Today()-14), &quot;Aged&quot;,
IF (LastActivityDate &gt; (Today()-30), &quot;Old&quot;,
&quot;Needs Immediate Attention&quot; ))),Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current- Last Activity = last 7 days, Aged=Last Activity last 14 days, Old=Last Activity last 30 days, no activity = Needs Immediate Attention</inlineHelpText>
        <label>Activity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_drop_qty__c</fullName>
        <inlineHelpText>this is entered by our third party vendor that processes our fulfillment orders</inlineHelpText>
        <label>OLD_Actual Drop Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agile_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agile Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternate_Start_Date__c</fullName>
        <inlineHelpText>used to reset the Website Goal Dates when a website project piece has been frozen.  Only the Creative Director and SFDC System Admin&apos;s can change this date</inlineHelpText>
        <label>Alternate Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final QA Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design QA in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content QA in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final QA in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Design QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Content QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Final QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending PM Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Dealer Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final QA Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design QA Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content QA Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final QA Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Edits Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Designer assigned from the Project Runner</inlineHelpText>
        <label>Assigned Designer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Pieces5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audit_Notes__c</fullName>
        <label>Audit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Autofollow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autofollow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autounfollow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autounfollow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Days_to_In_Home_Date__c</fullName>
        <formula>CASE(MOD( TODAY() - DATE(1985,6,24),7), 
0 , CASE( MOD( In_Home_Date__c - TODAY() ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( In_Home_Date__c - TODAY() ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( In_Home_Date__c - TODAY() ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( In_Home_Date__c - TODAY() ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( In_Home_Date__c - TODAY() ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( In_Home_Date__c - TODAY() ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( In_Home_Date__c - TODAY() ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( In_Home_Date__c - TODAY() )/7)*5)</formula>
        <label>Business Days to In Home Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Project__r.Business_Unit__c</formula>
        <inlineHelpText>Automatically pulls from the Project&apos;s Business Unit.</inlineHelpText>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Goal_Date__c</fullName>
        <formula>Project__r.Phase_5_Goal_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this is a formula field that brings the CRM Goal Date from the project into the project piece</inlineHelpText>
        <label>CRM Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Category__c</fullName>
        <label>Campaign Category</label>
        <picklist>
            <picklistValues>
                <fullName>Seasonal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inv Reduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Notes__c</fullName>
        <description>If Campaign Category is &apos;Other&apos;. 255 character limit.</description>
        <inlineHelpText>If Campaign Category is &apos;Other&apos;. 255 character limit.</inlineHelpText>
        <label>Campaign Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <description>Any general notes regarding this mailer. Brought over from the Opportunity.</description>
        <inlineHelpText>Brought over from the Opportunity.</inlineHelpText>
        <label>Campaign Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Closed Value used for calculations in reporting</inlineHelpText>
        <label>Closed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code_Implemented__c</fullName>
        <label>Code Implemented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Code_Request_Made__c</fullName>
        <label>Code Request Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comp_Proof_Completed__c</fullName>
        <inlineHelpText>enter the date the comp or site proof was completed</inlineHelpText>
        <label>Comp/Proof Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_Milestones__c</fullName>
        <formula>if(text( Milestone_1_Completed__c )!=null, 1,0)+ 
if(text( Milestone_2_Completed__c )!=null, 1,0)+ 
if(text( Milestone_3_Completed__c )!=null, 1,0)+ 
if(text( Milestone_4_Completed__c )!=null, 1,0)+ 
if(text( Milestone_5_Completed__c )!=null, 1,0)+ 
if(text( Milestone_6_Completed__c )!=null, 1,0)+ 
if(text( Milestone_7_Completed__c )!=null, 1,0)+ 
if(text( Milestone_8_Completed__c )!=null, 1,0)+ 
if(text( Milestone_9_Completed__c )!=null, 1,0)+ 
if(text( Milestone_10_Completed__c )!=null, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completion_Status_2__c</fullName>
        <formula>IF( Days_Open__c  &lt;61, &quot;On Time&quot;, &quot;Past Due&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates from the Date Created to the Date Stage updated to Completed</inlineHelpText>
        <label>Completion Status 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Status__c</fullName>
        <formula>IF( Days_to_Process_IMP_del__c &lt;61, &quot;On Time&quot;, &quot;Past Due&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>from Packet Rec&apos; Date to Date Stage updated to Completed</inlineHelpText>
        <label>Completion Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Complete__c</fullName>
        <label>Configuration Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_Training_Start_Date__c</fullName>
        <formula>Project__r.Confirmed_Training_Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed Training Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Made__c</fullName>
        <label>Contact Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup the contact at the dealership related to this specific product and assign to piece</inlineHelpText>
        <label>Product Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Pieces (Contact)</relationshipLabel>
        <relationshipName>Product_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Push_Picklist__c</fullName>
        <inlineHelpText>Updated by the Billing Item tied to this Project Piece. Only valid as of 8/20/2013</inlineHelpText>
        <label>Contract Push Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Not Activated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Activated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Push_Status_pic__c</fullName>
        <description>This indicates if the opportunity&apos;s contract has been pushed to RMB yet. 

If it has not been pushed (yellow), it is not in MotoSnap yet. 
If this is red, the product has been canceled in the contract. 
Green means it&apos;s activated in MotoSnap.</description>
        <formula>IF(
   !ISBLANK(TEXT(Contract_Push_Picklist__c)),
   CASE(Contract_Push_Picklist__c,
      &quot;Not Activated&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001zsi6&amp;oid=00D700000008zHZ&amp;lastMod=1377035344000&quot;, &quot;Not Activated&quot;),
      &quot;Activated&quot;,IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001zshw&amp;oid=00D700000008zHZ&amp;lastMod=1377035302000&quot;, &quot;Activated&quot;),
      &quot;Stopped&quot;,IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001zsiG&amp;oid=00D700000008zHZ&amp;lastMod=1377035367000&quot;, &quot;Stopped&quot;),
      &quot;NO IMAGE&quot;
   ),
   &quot;&quot;
)</formula>
        <inlineHelpText>This indicates if the opportunity&apos;s contract has been pushed to RMB yet. 

If it has not been pushed (yellow), it is not in MotoSnap yet.

If this is red, the product has been canceled in the contract.

Green means it&apos;s activated in MotoSnap.</inlineHelpText>
        <label>Contract Push Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coop_Approval_Required__c</fullName>
        <label>Coop Approval Required</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Creative_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Creative Project Manager</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$UserRole.Name</field>
                <operation>equals</operation>
                <value>Creative Project Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Pieces4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DDM_ID__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DDM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Integration__c</fullName>
        <inlineHelpText>date the checkbox &quot;In Integration&quot; was checked</inlineHelpText>
        <label>Date to Integration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMS__c</fullName>
        <formula>Project__r.DMS_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOD_Review_10__c</fullName>
        <formula>First_DOD_Review__c +405</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOD Review (10)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOD_Review_11__c</fullName>
        <formula>First_DOD_Review__c +450</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOD Review (11)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOD_Review_12__c</fullName>
        <formula>First_DOD_Review__c +495</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOD Review (12)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOD_Review_Completed_10__c</fullName>
        <label>DOD Review Completed (10)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOD_Review_Completed_11__c</fullName>
        <label>DOD Review Completed (11)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOD_Review_Completed_12__c</fullName>
        <label>DOD Review Completed (12)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOD_Status_10__c</fullName>
        <formula>IF((TEXT ( DOD_Review_Completed_10__c ) = NULL)
&amp;&amp; ( DOD_Review_10__c -7 &gt;= today()), &quot;Pending&quot;,

IF((TEXT (DOD_Review_Completed_10__c) = NULL)
&amp;&amp; (DOD_Review_10__c -2 &lt;= today()) &amp;&amp; (today() &lt; DOD_Review_10__c ), &quot;Nearing Goal&quot;,

IF((TEXT (DOD_Review_Completed_10__c) = NULL)
&amp;&amp; (DOD_Review_10__c &lt;= today())
&amp;&amp; (today() &lt;= DOD_Review_10__c +5), &quot;Due Now&quot;,

IF((TEXT (DOD_Review_Completed_10__c) = NULL)
&amp;&amp; (DOD_Review_10__c +5 &lt; today()), &quot;Goal Missed&quot;
&amp; IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000001UBKB&quot;, &quot;&quot; ),

IF(DOD_Review_Completed_10__c &lt;= DOD_Review_10__c +5
&amp;&amp; !ISBLANK(DOD_Review_Completed_10__c), &quot;Goal Completed&quot;,

IF(DOD_Review_Completed_10__c &gt; DOD_Review_10__c +5,
&quot;Goal Missed&quot; &amp; IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000001UBKB&quot;, &quot;&quot; ), &quot;Pending&quot;))))))</formula>
        <label>DOD Status (10)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOD_Status_11__c</fullName>
        <formula>IF((TEXT ( DOD_Review_Completed_11__c ) = NULL)
&amp;&amp; ( DOD_Review_11__c -7 &gt;= today()), &quot;Pending&quot;,

IF((TEXT (DOD_Review_Completed_11__c) = NULL)
&amp;&amp; (DOD_Review_11__c -2 &lt;= today()) &amp;&amp; (today() &lt; DOD_Review_11__c ), &quot;Nearing Goal&quot;,

IF((TEXT (DOD_Review_Completed_11__c) = NULL)
&amp;&amp; (DOD_Review_11__c &lt;= today())
&amp;&amp; (today() &lt;= DOD_Review_11__c +5), &quot;Due Now&quot;,

IF((TEXT (DOD_Review_Completed_11__c) = NULL)
&amp;&amp; (DOD_Review_11__c +5 &lt; today()), &quot;Goal Missed&quot;
&amp; IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000001UBKB&quot;, &quot;&quot; ),

IF(DOD_Review_Completed_11__c &lt;= DOD_Review_11__c +5
&amp;&amp; !ISBLANK(DOD_Review_Completed_11__c), &quot;Goal Completed&quot;,

IF(DOD_Review_Completed_11__c &gt; DOD_Review_11__c +5,
&quot;Goal Missed&quot; &amp; IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000001UBKB&quot;, &quot;&quot; ), &quot;Pending&quot;))))))</formula>
        <label>DOD Status (11)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOD_Status_12__c</fullName>
        <formula>IF((TEXT ( DOD_Review_Completed_12__c ) = NULL)
&amp;&amp; ( DOD_Review_12__c -7 &gt;= today()), &quot;Pending&quot;,

IF((TEXT (DOD_Review_Completed_12__c) = NULL)
&amp;&amp; (DOD_Review_12__c -2 &lt;= today()) &amp;&amp; (today() &lt; DOD_Review_12__c ), &quot;Nearing Goal&quot;,

IF((TEXT (DOD_Review_Completed_12__c) = NULL)
&amp;&amp; (DOD_Review_12__c &lt;= today())
&amp;&amp; (today() &lt;= DOD_Review_12__c +5), &quot;Due Now&quot;,

IF((TEXT (DOD_Review_Completed_12__c) = NULL)
&amp;&amp; (DOD_Review_12__c +5 &lt; today()), &quot;Goal Missed&quot;
&amp; IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000001UBKB&quot;, &quot;&quot; ),

IF(DOD_Review_Completed_12__c &lt;= DOD_Review_12__c +5
&amp;&amp; !ISBLANK(DOD_Review_Completed_12__c), &quot;Goal Completed&quot;,

IF(DOD_Review_Completed_12__c &gt; DOD_Review_12__c +5,
&quot;Goal Missed&quot; &amp; IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000001UBKB&quot;, &quot;&quot; ), &quot;Pending&quot;))))))</formula>
        <label>DOD Status (12)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOD_Value_1__c</fullName>
        <formula>If ( DOD_Status_1__c = &quot;Goal Complete&quot;, 16.6666,0)</formula>
        <label>DOD Value (1)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Build_Approved__c</fullName>
        <description>Date Build Approved by Customer</description>
        <label>Date Build Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Build_Completed__c</fullName>
        <description>Date Build Completed</description>
        <label>Date Build Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Build_Requested__c</fullName>
        <description>Date Build Requested</description>
        <label>Date Build Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Build_Started__c</fullName>
        <inlineHelpText>updated by a trigger when the designer clciks on the project runner button &quot;Start Build&quot;</inlineHelpText>
        <label>Date Build Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Comp_Approved__c</fullName>
        <description>Date Comp Approved by customer</description>
        <label>Date Comp Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Comp_Completed__c</fullName>
        <description>Date Comp Completed</description>
        <label>Date Comp Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Comp_Requested__c</fullName>
        <description>Date a Comp was requested</description>
        <label>Date Comp Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Comp_Started__c</fullName>
        <inlineHelpText>updated by a trigger when the designer clciks on the project runner button &quot;Start Comp&quot;</inlineHelpText>
        <label>Date Comp Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Dealer_Approved__c</fullName>
        <inlineHelpText>updated by the PM</inlineHelpText>
        <label>Date Dealer Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Out_Design_QA__c</fullName>
        <inlineHelpText>updated by workflow</inlineHelpText>
        <label>Date Out Design QA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Packet_Ret_d_del__c</fullName>
        <formula>Project__r.Date_Packet_Ret_d__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Packet Ret&apos;d</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Printed__c</fullName>
        <label>Date Printed/Packaged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Promised_to_Customer__c</fullName>
        <inlineHelpText>Date that was promised to the customer when their product would be live</inlineHelpText>
        <label>Date Promised to Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_QA_Approved__c</fullName>
        <inlineHelpText>updated by the approval process</inlineHelpText>
        <label>Date QA Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_QA_Rejected__c</fullName>
        <inlineHelpText>updated by the approval process</inlineHelpText>
        <label>Date QA Rejected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Revisions_Started__c</fullName>
        <inlineHelpText>updated by a trigger when the designer clciks on the project runner button &quot;Start Revisions&quot;</inlineHelpText>
        <label>Date Revisions Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Shipped__c</fullName>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Stage_Last_Updated__c</fullName>
        <inlineHelpText>used by workflow to calculate Stage Duration</inlineHelpText>
        <label>Date Stage Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Stage_Updated_to_Completed__c</fullName>
        <inlineHelpText>For Vin this is automatically updated by workflow</inlineHelpText>
        <label>Date Stage Updated to Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_for_QA__c</fullName>
        <inlineHelpText>updated by the approval process when the submit for approval button is clicked</inlineHelpText>
        <label>Date Submitted for QA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_last_reviewed_Dealer_of_the_Day__c</fullName>
        <inlineHelpText>Date Dealer of the Day was last reviewed</inlineHelpText>
        <label>Date last reviewed (DOD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_out_Content_QA__c</fullName>
        <inlineHelpText>updated by workflow</inlineHelpText>
        <label>Date Out Content QA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_out_of_Integration__c</fullName>
        <inlineHelpText>Date the checkbox &quot;In Integration&quot; was unchecked</inlineHelpText>
        <label>Date Out of Integration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_Content_QA__c</fullName>
        <inlineHelpText>updated by Workflow</inlineHelpText>
        <label>Date to Content QA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_Design_QA__c</fullName>
        <inlineHelpText>updated by workflow</inlineHelpText>
        <label>Date to Design QA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF (TEXT( Piece_Status__c )  = &quot;Open&quot; &amp;&amp; ISBLANK(Alternate_Start_Date__c) ,  Now()-  CreatedDate ,
IF (TEXT( Piece_Status__c )  = &quot;Open&quot; &amp;&amp; !ISBLANK(Alternate_Start_Date__c) ,  Today() - Alternate_Start_Date__c , 
Date_Stage_Updated_to_Completed__c - DateValue(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>if the piece status is Open, days open = Today-Created Date, if the piece status is closed the days open = Date Stage updated to Completed - Created Date</inlineHelpText>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Past_Complete__c</fullName>
        <formula>DATEVALUE(LastModifiedDate) - Date_Stage_Updated_to_Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Past Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Creation__c</fullName>
        <formula>IF(
   ISBLANK( Alternate_Start_Date__c ),
   TODAY() - DATEVALUE(CreatedDate),
   TODAY() - Alternate_Start_Date__c
)</formula>
        <inlineHelpText>If Alternate State Date is filled in, will use that instead of Created Date.</inlineHelpText>
        <label>Days Since Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_To_Contact__c</fullName>
        <formula>Milestone_1_Completed__c -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this is for Website Projects only</inlineHelpText>
        <label>Days To Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Design__c</fullName>
        <formula>IF(  ISPICKVAL(Project_Piece_Stage__c, &quot;Design&quot;), Today()- Milestone_2_Completed__c  , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Design</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Integration__c</fullName>
        <formula>IF( In_Integration__c =True, Today() -  DMS_Integration__c , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Integration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Process_IMP_del__c</fullName>
        <formula>( Date_Stage_Updated_to_Completed__c - Date_Packet_Ret_d_del__c)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date the stage was marked completed less the date the packet was returned</inlineHelpText>
        <label>Days to Process-IMP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Req_Gath__c</fullName>
        <formula>Milestone_2_Completed__c - Milestone_1_Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>for Websites Only - days between when Requirement Gathering Completed and Introduction Completed</inlineHelpText>
        <label>Days to Req Gath</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Training__c</fullName>
        <formula>IF( Confirmed_Training_Start_Date__c &gt; Today(),  Confirmed_Training_Start_Date__c -Today(),null)</formula>
        <label>Days to Training</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_ID__c</fullName>
        <formula>Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_s_Web_Address__c</fullName>
        <formula>Account__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this is feed from the Account page in Salesforce- to change/update this field navigate to the account page and edit the Website field</inlineHelpText>
        <label>Dealer&apos;s Web Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Completed__c</fullName>
        <label>Design Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desking_Functional__c</fullName>
        <label>Desking Functional</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_This_Week__c</fullName>
        <formula>IF ( MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( ( MS1_Due_Date__c  - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) &amp;&amp; ISBLANK(Milestone_1_Completed__c), MS1_Due_Date__c , 
IF ( MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( ( MS2_Due_Date__c  - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) &amp;&amp; ISBLANK(Milestone_2_Completed__c), MS2_Due_Date__c , 
IF ( MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( ( MS3_Due_Date__c  - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) &amp;&amp; ISBLANK(Milestone_3_Completed__c), MS3_Due_Date__c ,
IF ( MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( ( MS4_Due_Date__c  - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) &amp;&amp; ISBLANK(Milestone_4_Completed__c), MS4_Due_Date__c , 
IF ( MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( ( MS5_Due_Date__c  - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) &amp;&amp; ISBLANK(Milestone_5_Completed__c), MS5_Due_Date__c , 
IF ( MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( ( MS6_Due_Date__c  - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) &amp;&amp; ISBLANK(Milestone_6_Completed__c), MS6_Due_Date__c , 
IF ( MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( ( MS7_Due_Date__c  - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) &amp;&amp; ISBLANK(Milestone_7_Completed__c), MS7_Due_Date__c,
IF ( MOD(FLOOR( ( TODAY() - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) = MOD(FLOOR( ( MS8_Due_Date__c  - DATEVALUE(&quot;2006-01-01&quot; ))/7),52) &amp;&amp; ISBLANK(Milestone_8_Completed__c), MS8_Due_Date__c,
NULL 
))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date This Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
</CustomObject>